✨ feat(login): 实现自建 Gotify 服务器登录支持
- **新增登录模式**: 引入 `LoginMode` 枚举，支持在“官方服务器”与“自建服务器”模式间切换
- **实现自建服务器验证**:
    - 新增 `GotifyUserResponse` DTO 用于对接 Gotify `/current/user` 接口
    - 在 `AuthRepository` 中添加 `verifySelfHostedTokens` 逻辑，支持通过 App/Client Token 验证自建服务器
    - 增强 `AuthRepositoryImpl` 以支持 Gotify URL 格式校验及 Token 长度校验
- **重构登录 UI**:
    - 在 `LoginScreen` 中添加 `TabRow` 切换器，实现双模式登录表单切换
    - 实现 `SelfHostedLoginForm` 组件，包含服务器地址、App Token 和 Client Token 输入框
    - 优化 `LoginViewModel` 与 `LoginUiState`，集成自建模式的状态管理、字段校验及加载逻辑
- **架构与文档**:
    - 大幅完善 `CLAUDE.md`，增加 MVVM 架构对标 React 的详细说明，并补充项目目录结构与业务流程文档
    - 更新 `strings.xml` 添加自建服务器相关的文案与错误提示
    - 更新 `GotifyApiService` 新增获取当前用户信息接口，用于 Token 有效性验证
- **其他**: 优化 `LoginScreen` 登录成功后的跳转逻辑，自建模式下优先显示用户名而非邮箱。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,23 @@
     <string name="error_verification_code_wrong">验证码错误或已过期</string>
     <string name="error_send_code_failed">发送验证码失败</string>
 
+    <!-- 自建服务器登录 -->
+    <string name="login_mode_official">官方服务器</string>
+    <string name="login_mode_self_hosted">自建服务器</string>
+    <string name="login_gotify_server_label">Gotify 服务器地址</string>
+    <string name="login_app_token_label">App Token</string>
+    <string name="login_client_token_label">Client Token</string>
+    <string name="login_self_hosted_hint">请在 Gotify 服务器中创建应用获取 Token</string>
+
+    <!-- 自建服务器验证错误 -->
+    <string name="error_gotify_url_empty">服务器地址不能为空</string>
+    <string name="error_gotify_url_invalid">服务器地址格式不正确，需以 http:// 或 https:// 开头</string>
+    <string name="error_app_token_empty">App Token 不能为空</string>
+    <string name="error_app_token_invalid">Token 格式不正确（至少8位）</string>
+    <string name="error_client_token_empty">Client Token 不能为空</string>
+    <string name="error_client_token_invalid">Token 格式不正确（至少8位）</string>
+    <string name="error_token_verification_failed">Token 验证失败，请检查是否正确</string>
+
     <!-- 首页 -->
     <string name="home_welcome">欢迎, %s!</string>
     <string name="home_subtitle">这是一个现代化的 Android 应用</string>
