✨ feat(activity): 添加活动历史页面和数据处理功能
- 新增 ActivityMapper 用于将 Gotify 消息转换为活动项
- 添加 ActivityItem 数据模型和 ActivityType 枚举
- 实现 ActivityRepository 数据仓库层
- 创建 ActivityScreen 界面组件和筛选标签
- 添加 ActivityViewModel 状态管理和数据分组逻辑
- 集成 Activity 页面到主导航菜单，默认选中
- 添加活动页面相关的国际化字符串资源

🔧 chore(config): 更新 Claude 本地设置以支持 Android 调试命令

- 添加 adb install 和 adb shell screencap 命令白名单
- 用于 Android 应用安装和屏幕截图调试

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -140,4 +140,14 @@
         <item>周六</item>
         <item>周日</item>
     </string-array>
+
+    <!-- ==================== Activity 页面 ==================== -->
+    <string name="activity_title">活动</string>
+    <string name="activity_settings">设置</string>
+    <string name="activity_retry">重试</string>
+    <string name="activity_filter_all">全部</string>
+    <string name="activity_filter_notion">Notion</string>
+    <string name="activity_filter_tabs">标签页</string>
+    <string name="activity_filter_files">文件</string>
+    <string name="activity_end_message">已到达活动记录底部</string>
 </resources>
