--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,4 +140,14 @@
         <item>Sat</item>
         <item>Sun</item>
     </string-array>
+
+    <!-- ==================== Activity 页面 ==================== -->
+    <string name="activity_title">Activity</string>
+    <string name="activity_settings">Settings</string>
+    <string name="activity_retry">Retry</string>
+    <string name="activity_filter_all">All</string>
+    <string name="activity_filter_notion">Notion</string>
+    <string name="activity_filter_tabs">Tabs</string>
+    <string name="activity_filter_files">Files</string>
+    <string name="activity_end_message">End of activity history</string>
 </resources>
