✨ feat(login): 添加二维码登录功能
- 集成 CameraX 和 ML Kit 实现二维码扫描
- 添加 QrCodeLoginForm 和 QrCodeScannerView 组件
- 扩展 LoginMode 枚举支持 QR_CODE 模式
- 实现二维码数据验证和登录逻辑
- 添加相机权限请求和错误处理
- 配置相机和二维码扫描相关依赖
- 添加中英文国际化字符串资源
- 创建二维码登录测试数据生成脚本

【docs】添加二维码登录实现总结和测试指南文档

- 详细记录实现过程和技术要点
- 提供完整的测试用例和验证步骤
- 包含性能优化和安全验证说明

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -150,4 +150,12 @@
     <string name="activity_filter_tabs">标签页</string>
     <string name="activity_filter_files">文件</string>
     <string name="activity_end_message">已到达活动记录底部</string>
+
+    <!-- ==================== 二维码登录 ==================== -->
+    <string name="login_mode_qr_code">二维码登录</string>
+    <string name="login_qr_code_title">扫描二维码登录</string>
+    <string name="login_qr_code_description">使用 Droplink 服务器生成的二维码快速登录</string>
+    <string name="login_qr_code_scan_button">扫描二维码</string>
+    <string name="login_qr_code_scanning_hint">将二维码放入扫描框内</string>
+    <string name="login_qr_code_stop_scanning">停止扫描</string>
 </resources>
