🗑️ chore(docs): remove outdated documentation files
- 删除国际化指南文档 (INTERNATIONALIZATION_GUIDE.md)
- 删除二维码登录实现总结 (QR_CODE_LOGIN_IMPLEMENTATION_SUMMARY.md)
- 删除二维码登录测试指南 (QR_CODE_LOGIN_TEST.md)
- 删除二维码测试数据生成脚本 (generate_qr_test_data.py)

🔧 refactor(login): simplify login mode to QR code only

- 移除 OFFICIAL 和 SELF_HOSTED 登录模式
- 仅保留 QR_CODE 登录模式
- 更新 LoginMode 枚举注释说明

📱 refactor(login): implement dedicated QR scanner screen

- 【登录页面重构】移除多模式表单，仅保留二维码登录入口
- 【导航架构】新增独立的 QR_SCANNER 页面路由
- 【UI分离】将相机预览和扫描功能拆分为独立页面
- 【权限处理】在独立页面中统一处理相机权限请求
- 【状态管理】精简 LoginUiState，移除无关字段
- 【ViewModel】移除验证码和自托管登录相关逻辑

💄 style(login): enhance QR code login form UI

- 【视觉设计】更新登录表单为全屏布局样式
- 【交互元素】添加渐变背景和增强的按钮效果
- 【提示文案】完善二维码获取方式说明
- 【错误展示】优化错误信息卡片样式

📝 docs(i18n): add new QR code related strings

- 【国际化】添加扫码页面相关的中英文字符串资源
- 【权限提示】补充相机权限请求的提示文案
- 【错误信息】增加相机初始化失败等错误提示

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -158,4 +158,14 @@
     <string name="login_qr_code_scan_button">扫描二维码</string>
     <string name="login_qr_code_scanning_hint">将二维码放入扫描框内</string>
     <string name="login_qr_code_stop_scanning">停止扫描</string>
+    <string name="login_qr_code_auto_scan_hint">将二维码放入框内即可自动扫描</string>
+    <string name="login_qr_code_how_to_get">如何获取二维码？</string>
+    <string name="login_qr_code_how_to_get_desc">在 Droplink 服务器管理页面生成登录二维码</string>
+    <string name="login_qr_code_camera_permission_required">需要相机权限才能扫描二维码</string>
+    <string name="login_qr_code_camera_permission_desc">请授予相机权限以继续</string>
+    <string name="login_qr_code_grant_permission">授予权限</string>
+    <string name="login_qr_code_back">返回</string>
+    <string name="login_qr_code_cancel">取消</string>
+    <string name="login_qr_code_camera_init_failed">相机初始化失败</string>
+    <string name="login_qr_code_camera_permission_denied">需要相机权限才能扫描二维码</string>
 </resources>
